tests/res/construction/error_contruct_in_if.say
type T { pub x; }
if T { x: true }.x { } // error: Unexpected token: Expected ';' but found ':'